# lem_in

./: CMakeLists.txt  Makefile  Makefile~  add_func.c  algorithm.c  algorithm_help.c  algorithm_help_two.c  arr_len.c  comparison.c  error.c  error_help.c  ft_list_size.c  l.sh  lem-in  lem_in  lem_in.h  list_reverse.c  main.c  notes  output.c  output_help.c  parsing.c  parsing_help.c  save_map.c  save_room.c  save_room_link.c  swap.c  test  test1  test2  test3  test4
libft/: Makefile  ft_atoi.c  ft_fact.c  ft_itoa.c  ft_lstnew.c  ft_memmove.c  ft_strcmp.c  ft_strdel.c  ft_strdup.c  ft_strjoin.c  ft_strnew.c  get_next_line.c  get_next_line.h  libft.h
